# supabase-realtime-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: channel.rs  channel_event.rs  client.rs  connection.rs  error.rs  lib.rs  push.rs  task.rs  types.rs  utils.rs
src/protocol_objects/: access_token.rs  broadcast.rs  heartbeat.rs  message.rs  mod.rs  payload.rs  phx_close.rs  phx_error.rs  phx_join.rs  phx_leave.rs  phx_reply.rs  postgres_changes.rs  presence.rs  system.rs
tests/: test_connection.rs
