[package]
name = "supabase-realtime-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
futures = "0.3.31"
tokio-util = "0.7.15"
dotenv = "0.15.0"
regex = "1.11.1"
once_cell = "1.21.3"
